kustomize/app/bases/db-service.yml
apiVersion: v1
kind: Service
metadata:
  app: productdb
  name: productdb
spec:
  ports:
  - name: tcp
    port: 3306
  selector:
    name: productdb
