kustomize/app/bases/server-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: server
  labels:
    app: server
    app.kubernetes.io/name: server
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: server
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: server
